--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Kimchheang HENG</title>
   <meta content="iOS App Developer, Mobile App Development, bug bounty, bug bounty hunter" name="keywords">
-  <meta content="iOS App Developer" name="description">
+  <meta content="iOS App Developer, Bug bounty hunter" name="description">
+
+  <meta property="og:title" content="Kimchheang HENG">
+  <meta property="og:description" content="iOS App Developer, Bug bounty hunter">
+  <meta property="og:image" content="https://github.com/KimchheangHeng/personal-page/blob/master/assets/images/screenshot.PNG">
+  <meta property="og:url" content="http://kimchheang.me">
+
+  <meta name="twitter:title" content="Kimchheang HENG">
+  <meta name="twitter:description" content="iOS App Developer, Bug bounty hunter">
+  <meta name="twitter:image" content=" https://github.com/KimchheangHeng/personal-page/blob/master/assets/images/screenshot.PNG">
+
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
