--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -9,12 +9,11 @@
 
   <meta property="og:title" content="Kimchheang HENG">
   <meta property="og:description" content="iOS App Developer, Bug bounty hunter">
-  <meta property="og:image" content="https://github.com/KimchheangHeng/personal-page/blob/master/assets/images/screenshot.PNG">
-  <meta property="og:url" content="http://kimchheang.me">
+  <meta property="og:image" content="https://raw.githubusercontent.com/KimchheangHeng/personal-page/master/assets/images/screenshot.PNG">
 
   <meta name="twitter:title" content="Kimchheang HENG">
   <meta name="twitter:description" content="iOS App Developer, Bug bounty hunter">
-  <meta name="twitter:image" content=" https://github.com/KimchheangHeng/personal-page/blob/master/assets/images/screenshot.PNG">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/KimchheangHeng/personal-page/master/assets/images/screenshot.PNG">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +23,9 @@
   <link href="assets/lib/hover/hover.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/responsive.css" rel="stylesheet">
-  <link rel="shortcut icon" href="images/favicon.png">
+
+  <link href="assets/images/favicon.png" rel="icon">
+
 </head>
 <body>
   <div id="header" class="home">
@@ -42,6 +43,7 @@
       </div>
     </div>
   </div>
+  
   <script src="assets/lib/jquery/jquery.min.js"></script>
   <script src="assets/lib/jquery/jquery-migrate.min.js"></script>
   <script src="assets/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
