--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a href="https://www.linkedin.com/in/kimchheang95" target="_blank"><i class="ion-social-linkedin"></i></a></li>
           <li><a href="https://twitter.com/Kimchheang_Heng" target="_blank"><i class="ion-social-twitter"></i></a></li>
           <!-- <li><a href="https://www.youtube.com/channel/UCPqc50Wmt6ZF2BJWtNJlq-g" target="_blank"><i class="ion-social-youtube"></i></a></li> -->
-		      <li><a href="https://www.instagram.com/kimchheang_heng/" target="_blank"><i class="ion-social-instagram"></i></a></li>
+		      <li><a href="https://www.instagram.com/h.kimchheang/" target="_blank"><i class="ion-social-instagram"></i></a></li>
 		      <li><a href="https://www.facebook.com/kimchheang95" target="_blank"><i class="ion-social-facebook"></i></a></li>
       </div>
     </div>
